dhall/tests/type-errors/unit/FunctionTypeArgumentTypeNotAType.txt
Type error: Unhandled error: error: Invalid input type: `Natural`
 --> <current file>:1:0
  |
1 | 2 → _
  | ^ this has type: `Natural`
  |
  = help: The input type of a function must have type `Type`, `Kind` or `Sort`
